# python-tool-template

./: README.md  README.rst  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .run.py  AUTHORS.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  resource.qrc
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.project_slug}}/resource/css/: mainwindow.css
{{cookiecutter.project_slug}}/resource/ui/: mainwindow.ui
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: app.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/resource/ui/: mainwindow.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
