[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.rst"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
maintainers = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
classifiers = [

]
license = {text = "No open source"}
dependencies = [
  {% if cookiecutter.command_line_interface.lower() == "y" -%}
  "typer"
  {%- endif %}
  {%- if cookiecutter.qt_application == "y" -%}
      {%- if cookiecutter.qt_api == "PySide" -%}"PySide",
        {%- elif cookiecutter.qt_api == "PySide2" -%}"PySide2",
        {%- elif cookiecutter.qt_api == "PySide6" -%}"PySide6",
        {%- elif cookiecutter.qt_api == "PyQt4" -%}"PyQt4",
        {%- elif cookiecutter.qt_api == "PyQt5" -%}"PyQt5",
      {%- endif %}
      {%- if cookiecutter.qt_wrapper == "qtpy" -%}"qtpy",
        {%- elif cookiecutter.qt_wrapper == "Qt.py" -%}"Qt.py",
      {%- endif %}
  {%- endif %}
]

[project.optional-dependencies]
dev = [
    "typer", # it's required to run the .run.py script
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "black" # formating
]

[project.urls]

bugs = "{{cookiecutter.__git_host}}/{{cookiecutter.__git_slug}}/issues"
changelog = "{{cookiecutter.__git_host}}/{{cookiecutter.__git_slug}}/blob/master/changelog.md"
homepage = "{{cookiecutter.__git_host}}/{{cookiecutter.__git_slug}}"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

{% if cookiecutter.command_line_interface.lower() == 'y' %}
[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli:app"
{% endif %}
{% if cookiecutter.qt_application.lower() == 'y' %}
[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.app:run"
{% endif %}

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

